@@ -1595,6 +1595,16 @@ class Language {
 	}
 	
 	/**
+	 * Most writing systems use whitespace to break up words.
+	 * Some languages such as Chinese don't conventionally do this,
+	 * which requires special handling when breaking up words for
+	 * searching etc.
+	 */
+	function hasWordBreaks() {
+		return true;
+	}
+	
+	/**
 	 * Some languages have special punctuation to strip out
 	 * or characters which need to be converted for MySQL's
 	 * indexing to grok it correctly. Make such changes here.
