@@ -4,21 +4,23 @@
  * @ingroup Language
  */
 class LanguageZh_hans extends Language {
+	function hasWordBreaks() {
+		return false;
+	}
+	
 	function stripForSearch( $string ) {
-		# MySQL fulltext index doesn't grok utf-8, so we
-		# need to fold cases and convert to hex
-		# we also separate characters as "words"
-		if( function_exists( 'mb_strtolower' ) ) {
-			return preg_replace(
-				"/([\\xc0-\\xff][\\x80-\\xbf]*)/e",
-				"' U8' . bin2hex( \"$1\" )",
-				mb_strtolower( $string ) );
-		} else {
-			list( , $wikiLowerChars ) = Language::getCaseMaps();
-			return preg_replace(
-				"/([\\xc0-\\xff][\\x80-\\xbf]*)/e",
-				"' U8' . bin2hex( strtr( \"\$1\", \$wikiLowerChars ) )",
-				$string );
-		}
+		// Eventually this should be a word segmentation;
+		// for now just treat each character as a word.
+		//
+		// Note we put a space on both sides to cover cases
+		// where a number or Latin char follows a Han char.
+		//
+		// @fixme only do this for Han characters...
+		$t = preg_replace(
+				"/([\\xc0-\\xff][\\x80-\\xbf]*)/",
+				" $1 ", $string);
+		$t = preg_replace( '/ +/', ' ', $t );
+		$t = trim( $t );
+		return parent::stripForSearch( $t );
 	}
 }
